update and test

--- a/src/main/scala/index.html
+++ b/src/main/scala/index.html
@@ -22,15 +22,15 @@
         <thead>
             <tr>
                 <th>Team Name</th>
-                <th>Total Points</th>
+                <th>Round Points</th>
                 <th>Captain</th>
                 <th>Captain Points</th>
             </tr>
         </thead>
         <tbody id="team-details-output"></tbody>
     </table>
-
-    <h2>Rosters</h2>
+<!--
+<h2>Rosters</h2>
 <div class="country-container">
     <h3>Spain</h3>
     <select class="roster-dropdown" id="spainPlayerDropdown">
@@ -72,7 +72,6 @@
         <option value="Eduardo Lorrio">Eduardo Lorrio</option>
     </select>
 
-    <!-- Dropdown for selecting the player's position -->
     <select id="croatiaPositionDropdown">
         <option value="goalkeeper">Goalkeeper</option>
         <option value="field">Field</option>
@@ -94,7 +93,7 @@
     <button onclick="saveTeam()">Save Team</button>
     <button onclick="restartTeam()">Restart Team</button>
 </div>
-
+-->
     <script src="script.js"></script>
 </body>
 </html>
