connected points, leaderboard to the database

--- a/src/main/scala/index.html
+++ b/src/main/scala/index.html
@@ -95,16 +95,18 @@
 
     <div id="Leaderboard" class="tabcontent">
         <h3>Leaderboard</h3>
-        <table class="styled-table">
-            <thead>
-                <tr>
-                    <th>Team Name</th>
-                    <th>Total Points</th>
-                </tr>
-            </thead>
-            <tbody id="leaderboard-output"></tbody>
+        <table id="leaderboard-table" class="styled-table">
+          <thead>
+            <tr>
+              <th>Team Name</th>
+              <th>Total Points</th>
+            </tr>
+          </thead>
+          <tbody id="leaderboard-output">
+            <!-- Leaderboard data will be dynamically inserted here -->
+          </tbody>
         </table>
-    </div>
+      </div>
 
     <div id="Prize" class="tabcontent">
         <h3>"Miksi vesipalloilija ei saanut palkintoa? </h3>
