process-data fixed

--- a/src/main/scala/index.html
+++ b/src/main/scala/index.html
@@ -37,7 +37,6 @@
         </div>
     </div>
 
-
     <div id="SelectTeam" class="tabcontent">
         <h3>Select Team</h3>
             <div class="container">
@@ -99,17 +98,22 @@
     <div id="Leaderboard" class="tabcontent">
         <h3>Leaderboard</h3>
         <table id="leaderboard-table" class="styled-table">
-          <thead>
-            <tr>
-              <th>Team Name</th>
-              <th>Total Points</th>
-            </tr>
-          </thead>
-          <tbody id="leaderboard-output">
-            <!-- Leaderboard data will be dynamically inserted here -->
-          </tbody>
+            <thead>
+                <tr>
+                    <th>Team Name</th>
+                    <th>Total Points</th>
+                    <th>Details</th>
+                </tr>
+            </thead>
+            <tbody id="leaderboard-output">
+                <!-- Leaderboard data will be dynamically inserted here -->
+            </tbody>
         </table>
-      </div>
+    </div>
+    
+    <div id="team-details">
+        <!-- Team details will be displayed here -->
+    </div>
 
     <div id="Prize" class="tabcontent">
         <h3>"Miksi vesipalloilija ei saanut palkintoa? </h3>
