--- a/src/main/scala/index.html
+++ b/src/main/scala/index.html
@@ -35,10 +35,18 @@
             </form>
             <div class="message" id="registerMessage"></div>
         </div>
+        <div class="starting-message">
+            <p>Welcome! Here you can login or register for an account. 
+                The points calculation is complicated. To save team you have to register and login first</p>
+        </div>
     </div>
 
     <div id="SelectTeam" class="tabcontent">
         <h3>Select Team</h3>
+            <div id="currentRoundInfo">
+                <p id="roundNumber">Current Round: N/A</p>
+                <p id="roundDeadline">Deadline: N/A</p>
+            </div>
             <div class="container">
                 <div class="selected-players">
                     <h4>Starting Lineup</h4>
