fixed deadline and total points in leaderboard

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <h3>Select Team</h3>
             <div id="currentRoundInfo">
                 <p id="roundNumber">Current Round: N/A</p>
-                <p id="roundDeadline">Deadline: N/A</p>
+                <p id="roundDeadline">Next Round Deadline: N/A</p>
             </div>
             <div class="container">
                 <div class="selected-players">
@@ -108,6 +108,7 @@
         <table id="leaderboard-table" class="styled-table">
             <thead>
                 <tr>
+                    <th>Position</th>
                     <th>Team Name</th>
                     <th>Total Points</th>
                     <th>Details</th>
